<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/linear_calculator"
                                             xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:orientation="vertical"
                                             android:weightSum="5"
                                             tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraint_control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="293dp"
        tools:layout_conversion_absoluteWidth="411dp">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScroll_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="4"
            android:fillViewport="false"
            android:overScrollMode="never">

            <LinearLayout
                android:id="@+id/linear_inDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|end"
                android:orientation="vertical"/>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_control"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="439dp"
        tools:layout_conversion_absoluteWidth="411dp">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/button_7"
            app:layout_constraintEnd_toStartOf="@+id/button_del"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_del"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_del"
            app:layout_constraintBottom_toTopOf="@+id/button_8"
            app:layout_constraintEnd_toStartOf="@+id/button_mod"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_reset"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_mod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_mod"
            app:layout_constraintBottom_toTopOf="@+id/button_9"
            app:layout_constraintEnd_toStartOf="@+id/button_div"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_del"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_div"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_div"
            app:layout_constraintBottom_toTopOf="@+id/button_multi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_mod"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_7"
            app:layout_constraintBottom_toTopOf="@+id/button_4"
            app:layout_constraintEnd_toStartOf="@+id/button_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_reset"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_8"
            app:layout_constraintBottom_toTopOf="@+id/button_5"
            app:layout_constraintEnd_toStartOf="@+id/button_9"
            app:layout_constraintStart_toEndOf="@+id/button_7"
            app:layout_constraintTop_toBottomOf="@+id/button_del"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_9"
            app:layout_constraintBottom_toTopOf="@+id/button_6"
            app:layout_constraintEnd_toStartOf="@+id/button_multi"
            app:layout_constraintStart_toEndOf="@+id/button_8"
            app:layout_constraintTop_toBottomOf="@+id/button_mod"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_multi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_x"
            app:layout_constraintBottom_toTopOf="@+id/button_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_9"
            app:layout_constraintTop_toBottomOf="@+id/button_div"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_4"
            app:layout_constraintBottom_toTopOf="@+id/button_1"
            app:layout_constraintEnd_toStartOf="@+id/button_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_7"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_5"
            app:layout_constraintBottom_toTopOf="@+id/button_2"
            app:layout_constraintEnd_toStartOf="@+id/button_6"
            app:layout_constraintStart_toEndOf="@+id/button_4"
            app:layout_constraintTop_toBottomOf="@+id/button_8"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_6"
            app:layout_constraintBottom_toTopOf="@+id/button_3"
            app:layout_constraintEnd_toStartOf="@+id/button_sub"
            app:layout_constraintStart_toEndOf="@+id/button_5"
            app:layout_constraintTop_toBottomOf="@+id/button_9"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_sub"
            app:layout_constraintBottom_toTopOf="@+id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_6"
            app:layout_constraintTop_toBottomOf="@+id/button_multi"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_1"
            app:layout_constraintBottom_toTopOf="@+id/button_neg"
            app:layout_constraintEnd_toStartOf="@+id/button_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_4"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_2"
            app:layout_constraintBottom_toTopOf="@+id/button_0"
            app:layout_constraintEnd_toStartOf="@+id/button_3"
            app:layout_constraintStart_toEndOf="@+id/button_1"
            app:layout_constraintTop_toBottomOf="@+id/button_5"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_3"
            app:layout_constraintBottom_toTopOf="@+id/button_dot"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintStart_toEndOf="@+id/button_2"
            app:layout_constraintTop_toBottomOf="@+id/button_6"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            app:layout_constraintBottom_toTopOf="@+id/button_cal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_3"
            app:layout_constraintTop_toBottomOf="@+id/button_sub"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_neg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_neg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_1"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_dot"
            app:layout_constraintStart_toEndOf="@+id/button_neg"
            app:layout_constraintTop_toBottomOf="@+id/button_2"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_cal"
            app:layout_constraintStart_toEndOf="@+id/button_0"
            app:layout_constraintTop_toBottomOf="@+id/button_3"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />

        <Button
            android:id="@+id/button_cal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_equal"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_dot"
            app:layout_constraintTop_toBottomOf="@+id/button_add"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="103dp"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
